# SimpleClaw

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  agent.py  bus.py  channels.py  config.py  cron.py  docker-compose.yml  main.py  memory.py  pyproject.toml  requirements.txt  skills.py  tools.py
configs/: config.example.json
core/: agent.py  channels.py  config.py  context.py  cron.py  heartbeat.py  memory.py  provider.py  skills.py  telegram_channel.py  tools.py
core/channels/: __init__.py  base.py  cli.py  telegram.py  wecom.py
template/: AGENTS.md  HEARTBEAT.md  SOUL.md  USER.md
template/memory/: MEMORY.md
template/skills/: README.md
template/skills/clawhub/: SKILL.md
template/skills/cron/: SKILL.md
template/skills/memory/: SKILL.md
template/skills/skill-creator/: SKILL.md
template/skills/skill-creator/scripts/: quick_validate.py
